Added Unit test usecases for TDD & json file for products and offers

--- a/PromotionEngine.Test/PromotionEngine.Test.csproj
+++ b/PromotionEngine.Test/PromotionEngine.Test.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PromotionEngine\PromotionEngine.csproj">
+      <Project>{5D655155-EC04-44A2-97FD-AFA3B080A0EA}</Project>
+      <Name>PromotionEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
