--- a/PromotionEngine.Test/PromotionEngine.Test.csproj
+++ b/PromotionEngine.Test/PromotionEngine.Test.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdditionalItemOfferTest.cs" />
+    <Compile Include="ComboOfferTest.cs" />
     <Compile Include="Scenarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
